added feature for short video generated with cache

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
 			root /usr/share/nginx/html;
 		}
 
-		location ~ /(list|update|command) {
+		location ~ /(list|update|command|getvideo) {
 			proxy_pass http://mypython:5000;
 		}
 
